


add_executable(visually_inspect_static_transform_tree visually_inspect_static_transform_tree.cpp)
target_include_directories(visually_inspect_static_transform_tree PUBLIC /opt/ros/noetic/include)
#target_link_libraries(visually_inspect_transform_tree ${roscpp_LIBRARIES} visualizer geometry)
target_link_libraries(visually_inspect_static_transform_tree visualizer ${roscpp_LIBRARIES} ros_conversions)